Start removing flyway and moving shared test utils to new project
move common test utils to common location, resolve issues

Clean up poms, fix RDA migration tests, moving some things to common loations

Remove schema migration from RDA load

Moving things to common locations and fixing tests

Fix issues with bfd IT tests due to not writing out the server file

Cleanup